--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,3 +1,6 @@
 body {
     background-image: url("../img/background.png");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
 }
